syntax = "proto3";

package user.api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

import "user/api/role/v1/role.proto";

option go_package = "github.com/goxiaoy/go-saas-kit/user/api/user/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User Service";
    version: "1.0";
  };
};
service UserService{
  rpc ListUsers(ListUsersRequest)returns(ListUsersResponse){
    option (google.api.http) = {
      get: "/v1/users"
      additional_bindings:{
        post: "/v1/user/list"
        body: "*"
      }
    };
  }
  rpc GetUser (GetUserRequest) returns (User){
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }
  rpc CreateUser(CreateUserRequest) returns(User){
    option (google.api.http) = {
      post: "/v1/user"
      body:"*"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns(User){
    option (google.api.http) = {
      put: "/v1/user/{user.id}"
      body: "*"
      additional_bindings: [
        {
          patch: "/v1/user/{user.id}"
          body: "*"
        }
      ]
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse){
    option (google.api.http) = {
      delete: "/v1/user/{id}"
    };
  }
  rpc GetUserRoles(GetUserRoleRequest) returns(GetUserRoleReply){
    option (google.api.http) = {
      get: "/v1/user/{id}/roles"
    };
  }
}

message UserFilter{
  repeated string id_in =1;
  repeated string gender_in=2;

  google.protobuf.Timestamp birthday_gte=3;
  google.protobuf.Timestamp birthday_lte=4;

  .user.api.role.v1.RoleFilter roles =5;

  repeated UserFilter and =7;
  repeated UserFilter or =8;

}



message ListUsersRequest{
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  UserFilter filter =6;
}

message GetUserRequest{
  string  id=1 [(validate.rules).string.min_len = 1];
}


message User{
  string  id=1;
  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;
  repeated .user.api.role.v1.Role roles=8;
}



message ListUsersResponse{
  int32 total_size =1;
  int32 filter_size =2;

  repeated User items = 3;

}

message CreateUserRequest{
    google.protobuf.StringValue username =1 [(validate.rules).string.min_len = 1];
    google.protobuf.StringValue name=2;
    google.protobuf.StringValue phone =3;
    google.protobuf.StringValue email=4 [(validate.rules).string.email = true];

    string password=5;
    string confirm_password=6;
    google.protobuf.Timestamp birthday=7;
    //
    Gender gender=8;
}

enum Gender{
  UNKNOWN =0;
  MALE =1;
  FEMALE =2;
  OTHER=3;
}
message CreateUserResponse{
  string  id=1;
  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //Gender
  Gender gender=7;
}
message UpdateUserRequest{
  UpdateUser user=2 [(validate.rules).message.required=true];
  google.protobuf.FieldMask update_mask = 3;
}

message UpdateUser{
  string id =1[(validate.rules).string.min_len=1];

  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;

  //reset password
  string password=8;
  string confirm_password=9;
}

message DeleteUserRequest{
  string id =1;
}
message DeleteUserResponse{

}

message GetUserRoleRequest{
  string id =1;
}
message GetUserRoleReply{
  repeated UserRole roles=1;
}

message UserRole{
  string  id=1;
  string name =2;
}